--- a/Node-rest-Api/package.json
+++ b/Node-rest-Api/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "bcrypt-ts": "^5.0.2",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
     "mongoose": "^8.5.1",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.4"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.4",
+    "path": "^0.12.7"
   }
 }
