--- a/Social-App-Designing/package.json
+++ b/Social-App-Designing/package.json
@@ -4,15 +4,19 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "kiki": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "cross-env": "^7.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.0"
+    "react-dotenv": "^0.1.3",
+    "react-router-dom": "^6.25.0",
+    "timeago.js": "^4.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
@@ -23,5 +27,6 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "vite": "^5.3.1"
-  }
+  },
+  "proxy": "http://localhost:8000/api"
 }
