--- a/Node-rest-Api/.env
+++ b/Node-rest-Api/.env
@@ -1,1 +1,1 @@
-MONGO_URL = mongodb+srv://KhushiDhiman2006:vashisth2006@cluster0.xxihbhx.mongodb.net/social?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URL = mongodb+srv://KhushiDhiman2006:your_password@cluster0.xxihbhx.mongodb.net/social?retryWrites=true&w=majority&appName=Cluster0
